<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMenu">

    <include
        android:id="@+id/settings_about_toolbar"
        layout="@layout/settings_about_toolbar"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="0dp">
    </include>

    <TextView
        android:id="@+id/githubrepoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_repo"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyrightBtn"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/copyrightBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="@+id/settings_about_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/creditsBtn"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/creditsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/settings_about_toolbar"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDescript"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/appDescript"
        android:layout_width="338dp"
        android:layout_height="99dp"
        android:text="@string/shinyhunter_is_an_app_that_helps_users_keep_track_on_how_many_times_they_ve_soft_reset"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_about_toolbar"
        app:layout_constraintVertical_bias="0.144" />

</androidx.constraintlayout.widget.ConstraintLayout>