<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/settings_about_credits_toolbar"
        layout="@layout/settings_about_credits_toolbar"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="0dp">
    </include>

    <TextView
        android:id="@+id/contributors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contributors"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/settings_about_credits_toolbar"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/dragoscriptBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dragoscript"
        android:textColor="#E6000000"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/contributors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_about_credits_toolbar"
        app:layout_constraintVertical_bias="0.144" />

</androidx.constraintlayout.widget.ConstraintLayout>